add playlist API Mapping
